SDC-5468. Remove Java 7 JVM flags from cluster mode defaults
Change-Id: I7564bee4759ed850d71e9b23ec942b62636da002
Reviewed-on: https://review.streamsets.net/6937
Reviewed-by: Jarcec Cecho <jarcec@streamsets.com>
Reviewed-by: Virag Kothari <virag@streamsets.com>